tests/tactics/fail/0003-intros.ec
lemma foo : forall (x1:bool) (x2:bool),
(x1 => x2) => x2.
proof -strict.
  intros x x.
